Fixed UI overlap issue

--- a/style.css
+++ b/style.css
@@ -134,24 +134,13 @@ input
     border-radius: 10px;
 }
 
-.title
-{
-    position: absolute;
-    left: 40%;
-    top: 5%;
-    color: black;
-    font-family: sans-serif;
-    font-weight: bold;
+.title {
+  text-align: center;
+  margin-top: 30px;
 }
 
 .footer
-{
-    position: absolute;
-    text-align: center;
-    left: 42%;
-    top: 87%;
-    font-size: 15px;
-    color: black;
-    font-family: sans-serif;
-    font-weight: bold;
+.footer {
+  text-align: center;
+  margin-top: 20px;
 }
